--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -4,7 +4,7 @@
      justify-content: center;
      align-items: center;
      gap: 60px;
-     margin-left: 15vw;
+     /* margin-left: 15vw; */
      margin-top: 50px;
 
  }
@@ -27,7 +27,8 @@
      color: white;
      cursor: pointer;
      margin-top: 10px;
-     background: linear-gradient(135deg, #8E2DE2, #4A00E0);
+     /* background: linear-gradient(135deg, #8E2DE2, #4A00E0); */
+     background-color: var(--toggle-color);
      transition: all 0.3s ease-in-out;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
@@ -131,22 +132,6 @@
  }
 
 
- /* kerakli ammo keraksiz */
- /* .data {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    } */
- /* .title-and-btn {
-    padding-left: 1rem;
-    padding-right: 1rem;
-   } */
- /* .card-open {
-     height: 800px;
- } */
- /* .course-card-cont h2:first-child {
-     margin-top: 10px;
- } */
 
 
  @media (max-width:850px) {
@@ -155,17 +140,11 @@
          grid-template-columns: repeat(2, auto);
          justify-content: center;
          align-items: center;
-         /* gap: 20px;
-         width: 85%;
-         padding-left:20% ; */
 
      }
 
-     .section-open .course-list {
-         width: 89%;
-         padding-left:1.5% !important;
-        
-     }
+     
+    
 
      .card {
          position: relative;
@@ -177,7 +156,7 @@
 
 
 
-     .section-open .pictures {
+      .pictures {
          width: 330px;
          height: 260px;
          border-top-left-radius: 0.4rem;
@@ -196,7 +175,6 @@
          justify-content: center;
          align-items: center;
          gap: 50px;
-         margin-left: 2px;
 
      }
 
@@ -212,7 +190,7 @@
 
 
      .pictures {
-         width: 300px;
+         width: 20px;
          height: 310px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
@@ -224,11 +202,12 @@
          bottom: 0;
          text-align: start;
      }
-
-     .section-open .course-list {
-        width: 89%;
+     .course-list {
+        width: 100%;
+        
+    }
+    section{
         padding-left: 0 !important;
-       
     }
 
 
