--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -1,21 +1,36 @@
  .course-list {
      display: grid;
-     grid-template-columns: repeat(3, auto);
+     grid-template-columns: repeat(2, 1fr);
      justify-content: center;
      align-items: center;
      gap: 60px;
-     /* margin-left: 15vw; */
      margin-top: 50px;
 
  }
+ .card {
+    position: relative;
+    height: 400px;
+ padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--nav-said);
+    border-radius: 2rem;
 
- .dataToggle:hover {
-     transform: translateY(-2px) scale(1.03);
-     box-shadow:
-         0 5px 12px rgba(0, 0, 0, 0.15),
-         0 0 10px rgba(142, 45, 226, 0.5);
-     filter: brightness(1.1);
- }
+}
+
+
+.dataToggle:hover {
+    transform: translateY(-2px) scale(1.03);
+    box-shadow:
+        0 5px 12px rgba(0, 0, 0, 0.15),
+        0 0 10px rgba(142, 45, 226, 0.5);
+    filter: brightness(1.1);
+}
+.card .face.front {
+    color: var(--card-text);
+    background: var(--nav-said);
+}
 
  .dataToggle {
      width: 100%;
@@ -27,108 +42,22 @@
      color: white;
      cursor: pointer;
      margin-top: 10px;
-     /* background: linear-gradient(135deg, #8E2DE2, #4A00E0); */
      background-color: var(--toggle-color);
      transition: all 0.3s ease-in-out;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
 
-
- .card {
-     width: 600px;
-     position: relative;
-     height: 400px;
-     transform-style: preserve-3d;
-     border-radius: 15px;
- }
-
- .card .face h4 {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 10px;
-     text-transform: uppercase;
-     transform: perspective(500px) translateZ(50px);
-
- }
-
- .full-info h2 {
-     line-height: 2;
- }
-
- .section-open .course-list {
-     width: 91%;
-     margin-left: 7.5%;
- }
-
- /* old qismi */
- .card .face {
-     position: absolute;
-     top: 0;
-     left: 0;
-     /* width: 300px; */
-     height: 100%;
-     transform-style: preserve-3d;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     backface-visibility: hidden;
-     transition: 2s ease-in-out;
-     transform: perspective(500px) rotateY(0deg);
-
- }
-
- .card .face.front {
-     color: rgb(22, 21, 21);
-     width: 100%;
- }
-
- .card:hover .face.front {
-     transform: perspective(500px) rotateY(180deg);
- }
-
- .card .face.front .teacher-info {
-     position: absolute;
-     bottom: 0;
-     text-align: center;
- }
-
-
- /* orqa qismi */
-
- .card:hover .face.back {
-     transform: perspective(500px) rotateY(360deg);
- }
-
- .card .face.back h2 {
-
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 10px;
-     text-transform: uppercase;
-     transform: perspective(500px) translateZ(50px);
-
- }
-
- .card .face.back {
-
-     color: black;
-     transform: perspective(500px) rotateY(180deg);
-     padding: 2rem;
-
- }
-
- /* o'qituvchilarni rasmi uchun berilgan stil */
+ 
+.picture-cont{
+    width: 300px;
+    overflow: hidden;
+    border-radius: 1rem;
+}
  .pictures {
-     width: 80%;
-     height: 70%;
+     width: 400px;
+margin-left: -20%;
      border-radius: 0.4rem;
-     position: fixed;
-     transform: perspective(500px) translateZ(50px);
-
-
-
+     
  }
 
 
@@ -143,9 +72,6 @@
 
      }
 
-     
-    
-
      .card {
          position: relative;
          width: 390px;
@@ -156,7 +82,7 @@
 
 
 
-      .pictures {
+     .pictures {
          width: 330px;
          height: 260px;
          border-top-left-radius: 0.4rem;
@@ -164,7 +90,9 @@
 
      }
 
-
+     section {
+         padding-left: 10rem !important;
+     }
 
  }
 
@@ -202,13 +130,15 @@
          bottom: 0;
          text-align: start;
      }
+
      .course-list {
-        width: 100%;
-        
-    }
-    section{
-        padding-left: 0 !important;
-    }
+         width: 100%;
+
+     }
+
+     section {
+         padding-left: 0 !important;
+     }
 
 
  }
