--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,16 @@
   --text-cont: #cac7c7bf;
   --toggle-color: #2a74e4;
   --toggle-cont-color:#E5E5E5;
+  --info:rgb(167, 164, 164);
 }
 [data-theme="dark"] {
   --text: #111827;
   --bg-cont: #ffffff;
   --nav-said:#DFDFDF;
   --text-cont: #423e3ebf;
-  --toggle-color:#ca11ca ;
+  --toggle-color:#e966e9 ;
   --toggle-cont-color:#1F1F1F;
+  --info:rgb(99, 95, 95);
 
 }
 
