--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 :root {
   --text:white;
   --bg-cont: #202020;
-  --nav-said: #363636;
+  --nav-side: #363636;
   --text-cont: #cac7c7bf;
   --toggle-color: #2a74e4;
   --toggle-cont-color:#E5E5E5;
@@ -19,7 +19,7 @@
 [data-theme="dark"] {
   --text: #111827;
   --bg-cont: #ffffff;
-  --nav-said:#DFDFDF;
+  --nav-side:#DFDFDF;
   --text-cont: #423e3ebf;
   --toggle-color:#e966e9 ;
   --toggle-cont-color:#1F1F1F;
