--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,8 +1,17 @@
-.navbar {
-    position: sticky;
-    width: 98%;
+.navbar-cont {
+    position: fixed;
+    width: 100vw;
     height: 3rem;
-    background: var(--nav-said);
+    top: 1%;
+   right: 0;
+   display: flex;
+   justify-content: flex-end;
+   padding-right: 0.5rem;
+}
+.navbar{
+   
+    height: 3rem;
+    background: var(--nav-side);
     padding: 1rem;
     border-radius: 0.4rem;
     font-weight: bolder;
@@ -10,8 +19,6 @@
     justify-content: space-between;
     align-items: center;
     font-size: 35px;
-    z-index: 1000;
-    top: 1%;
    
 }
 
@@ -30,7 +37,7 @@
 
 
 
-.saidbar-btn {
+.sidebar-btn {
     display: none;
 }
 
@@ -94,10 +101,10 @@
 @media (max-width: 850px) {
 
     .navbar {
-        width: 100%;
+        width: 80.5%;
         position: fixed;
         height: fit-content;
-        background-color: var(--nav-said);
+        background-color: var(--nav-side);
         border: 1px solid var(--border-cont);
         padding: 1rem;
         border-radius: 0.4rem;
@@ -106,13 +113,14 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        overflow-x: hidden;
         
        
     }
 
-    .saidbar-btn {
+    .sidebar-btn {
         display: inline;
-        background-color: var(--nav-said);
+        background-color: var(--nav-side);
 
     }
 
@@ -126,7 +134,7 @@
         width: 100%;
         position: fixed;
         height: fit-content;
-        background-color: var(--nav-said);
+        background-color: var(--nav-side);
         border: 1px solid var(--border-cont);
         padding: 1rem;
         border-radius: 0.4rem;
@@ -138,7 +146,7 @@
         align-items: center;
     }
 
-    .saidbar-btn {
+    .sidebar-btn {
         display: inline;
     }
 
