--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -4,7 +4,7 @@
      justify-content: center;
      align-items: center;
      gap: 30px;
-     margin-top: 50px;
+     margin-top: 20px;
      margin-right: 10px;
 
  }
@@ -16,16 +16,13 @@
      display: flex;
      align-items: start;
      justify-content: start;
-     gap: 30px;
-     background-color: var(--nav-said);
+     gap: 10px;
+     background-color: var(--nav-side);
      border-radius: 2rem;
      font-size: 25px;
 
  }
-.lesson-days{
-    display: flex;
-    justify-content: space-between;
-}
+
 
  .infos{
     line-height: 40px;
@@ -39,15 +36,11 @@
 
  }
 
- .full-info{
-    width: 100%;
-    display: flex;
-}
 .short-info{
     width: 60%;
     height: 92%;
    background: var(--bg-cont);
-   border-radius: 1.5rem;
+   border-radius: 1rem;
    padding: 1rem;
    display: inline;
 }
@@ -60,7 +53,7 @@
     border-radius: 0.8rem;
     margin-top: 10px;
     padding: 0.5rem;
-    background-color: var(--nav-said);
+    background-color: var(--nav-side);
     padding-left: 1rem;
     
 }
@@ -70,7 +63,7 @@
     line-height: 30px;
     flex: 1;
     height: fit-content;
-    background-color: var(--nav-said);
+    background-color: var(--nav-side);
     padding: 1rem;
     border-radius: 1.5rem;
 }
@@ -80,7 +73,11 @@
     justify-content: start;
     gap: 8px;
 }
+
+
+
 .lesson-days{
+  
     width: 100%;
     display: flex;
     align-items: center;
@@ -88,17 +85,7 @@
     gap: 20px;
 }
 
-.full-info-cont1{
-   width: 100%; 
-   border: 1px solid yellow;
-   flex: 1;
-   
-}
-.full-info-cont2{
-    width: 100%; 
-    border: 1px solid red;
-    flex: 1;
- }
+
 
  .dataToggle:hover {
      transform: translateY(-2px) scale(1.03);
@@ -110,7 +97,7 @@
 
  .card .face.front {
      color: var(--card-text);
-     background: var(--nav-said);
+     background: var(--nav-side);
  }
 
  .dataToggle {
@@ -130,68 +117,65 @@
 
 
  .picture-cont {
-     width: 300px;
-     height: 100%;
+     width: 350px;
+     height: 99%;
      overflow: hidden;
      border-radius: 1rem;
+    
  }
-
+ 
  .pictures {
      width: 400px;
-     margin-left: -20%;
+     height: 420px;
+     margin-left: -15%;
      border-radius: 0.4rem;
-
+     
  }
+ 
 
-
-
-
+ 
+ 
  @media (max-width:850px) {
      .course-list {
          display: grid;
          grid-template-columns: repeat(1, 1fr);
          justify-content: start;
          align-items: center;
-       margin-top: 100px;
-         /* gap: 20px; */
-
-     }
-
-     .card {
-         position: relative;
-         width: 100%;
-         height: 400px;
-         transform-style: preserve-3d;
-         border-radius: 15px;
-     }
-
-
-
-     .pictures {
-         width: 330px;
-       height: 100%;
-         border-top-left-radius: 0.4rem;
-         border-top-right-radius: 0.4rem;
-
-     }
-
+         margin-top: 100px;
+         
+        }
+        .card {
+            position: relative;
+            width: 90%;
+            height: fit-content;
+            transform-style: preserve-3d;
+            border-radius: 15px;
+        }
      section {
          padding-left: 6rem !important;
-     }
-
- }
-
- @media (max-width:500px) {
-     .course-list {
-         display: grid;
-         grid-template-columns: repeat(1, 1fr);
+        }
+        
+        
+         .picture-cont {
+             width: 350px;
+             height: 90%;
+             overflow: hidden;
+             border-radius: 1rem;
+            
+         }
+    }
+    
+    @media (max-width:500px) {
+        .course-list {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
          justify-content: center;
          align-items: center;
          gap: 50px;
          padding: 0,2rem;
          overflow-x: hidden;
          
-
+         
      }
 
 
