--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   font-family: 'Roboto', sans-serif;
 
 }
-
+html, body {
+  overflow-x: hidden;
+}
 /* ranglar almashinuvi uchun berilgan stillar */
 
 :root {
