--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -8,7 +8,7 @@
     padding: 1rem;
     top: 1%;
     border-radius: 0.4rem;
-    z-index: 30; 
+    z-index: 1000; 
 }
 /* yopilganda berilgan stil */
 .sidebar-open{
@@ -183,6 +183,10 @@
     .sidebarBtn{
         display: none;
     }
+    /* .sidebar .toggle{
+        display: flex;
+    } */
+    
     .sidebar .toggle{
         display: none;
     }
