--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -93,15 +93,64 @@
 }
 
 
+@media (max-width:1440px) {
+    .navbar{
+        height: 3rem;
+        background: var(--nav-side);
+        border: 1px solid var(--border-cont);
+        padding:1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        
+    }
 
+    .navbar-cont {
+        position: fixed;
+        width: 100.5vw;
+        height: 3rem;
+        top: 1%;
+       right: 0;
+       display: flex;
+       justify-content: flex-end;
+       margin-right: 10px;
+       z-index: 500;
+    }
+}
+@media (max-width:1024px) {
+    .navbar{
+        height: 3rem;
+        background: var(--nav-side);
+        border: 1px solid var(--border-cont);
+        padding:1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        
+    }
 
-
-
-
+    .navbar-cont {
+        position: fixed;
+        width: 100vw;
+        height: 3rem;
+        top: 1%;
+       right: 0;
+       display: flex;
+       justify-content: flex-end;
+       margin-right: 10px;
+       z-index: 500;
+    }
+}
 
 @media (max-width: 850px) {
     
-
+    
     .navbar{
         
         min-width: 86.5% !important;
@@ -128,7 +177,7 @@
        display: flex;
        justify-content: flex-end;
        margin-right: 10px;
-       z-index: 500;
+       z-index: 1000;
     }
     .sidebar-btn {
         display: inline;
@@ -140,13 +189,39 @@
     
 }
 
+@media (max-width:768px) {
+    .navbar{
+        height: 3rem;
+        background: var(--nav-side);
+        border: 1px solid var(--border-cont);
+        padding:1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        
+    }
+
+    .navbar-cont {
+        position: fixed;
+        width: 96.5vw;
+        height: 3rem;
+        top: 1%;
+       right: 0;
+       display: flex;
+       justify-content: flex-end;
+       margin-right: 7px;
+       z-index: 51000;
+    }
+}
 
 @media (max-width:500px) {
     .navbar{
         height: 3rem;
         background: var(--nav-side);
         border: 1px solid var(--border-cont);
-        /* border: 1px solid red; */
         padding:1rem;
         border-radius: 0.4rem;
         font-weight: bolder;
@@ -166,7 +241,6 @@
        display: flex;
        justify-content: flex-end;
        margin-right:5px;
-       /* padding-right:50px; */
        z-index: 1000;
     }
     
@@ -181,3 +255,60 @@
 
 
 }
+
+@media (max-width:425px) {
+    .navbar{
+        height: 3rem;
+        background: var(--nav-side);
+        border: 1px solid var(--border-cont);
+        padding:1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        
+    }
+
+    .navbar-cont {
+        position: fixed;
+        width: 104.5vw;
+        height: 3rem;
+        top: 1%;
+       right: 0;
+       display: flex;
+       justify-content: flex-end;
+       margin-right: 7px;
+       /* z-index: 500; */
+       z-index: 1000;
+    }
+}
+
+/* @media (max-width:375px) {
+    .navbar{
+        height: 3rem;
+        background: var(--nav-side);
+        border: 1px solid var(--border-cont);
+        padding:1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 35px;
+        
+    }
+
+    .navbar-cont {
+        position: fixed;
+        width: 99.5vw;
+        height: 3rem;
+        top: 1%;
+       right: 0;
+       display: flex;
+       justify-content: flex-end;
+        margin-right: px; 
+       z-index: 500;
+    }
+} 
