--- a/src/styles/Students.css
+++ b/src/styles/Students.css
@@ -109,12 +109,49 @@
 
 
 
+@media(max-width:1440px){
+  .students {
+    width: 96.7%;
+    padding: 1rem;
+    margin-top: 100px;
+    background-color: var(--nav-side);
+    border-radius: 0.4rem;
+  }
 
+}
+@media(max-width:1024px){
+  .students {
+    width: 95.7%;
+    padding: 1rem;
+    margin-top: 100px;
+    background-color: var(--nav-side);
+    border-radius: 0.4rem;
+  }
+
+}
 
 
 @media (max-width:850px) {
   .students {
     width: 94.7%;
+    padding: 1rem;
+    margin-top: 100px;
+    background-color: var(--nav-side);
+    border-radius: 0.4rem;
+  }
+
+}
+
+.name-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+@media (max-width:768px) {
+  .students {
+    width: 94%;
     padding: 1rem;
     margin-top: 100px;
     background-color: var(--nav-side);
