--- a/src/styles/SinglePage.css
+++ b/src/styles/SinglePage.css
@@ -111,6 +111,74 @@
 .inner-cont3 {}
 
 
+@media (max-width: 1440px) {
+
+    .single-page {
+        width: 100%;
+        height: 1400px;
+        width: 96%;
+        padding-top: 100px;
+
+    }
+
+    .full-info {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+    }
+
+    .basic-information {
+        width: 97.4%;
+        height: 10%;
+        background: var(--bg-cont);
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        margin-bottom: 2px;
+        color: var(--info);
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        font-size: 30px;
+        padding-left: 1rem;
+        text-transform: uppercase;
+        font-weight: bolder;
+    }
+
+    .full-info-cont1 {
+        width: 99.5%;
+        height: 100%;
+        background: var(--nav-side);
+        padding: 1rem;
+        border-radius: 0.4rem;
+
+    }
+
+    .full-info-cont2 {
+        width: 98.5%;
+        height: 100%;
+        background: var(--nav-side);
+        padding: 1rem;
+        border-radius: 0.4rem;
+        margin-top: 20px;
+
+    }
+
+    .inner-cont-1 {
+        width: 95.7%;
+        height: 40%;
+        display: flex;
+        gap: 10px;
+        background: var(--bg-cont);
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+        padding: 1rem;
+        margin-bottom: 20px;
+
+    }
+
+}
 @media (max-width: 850px) {
 
     .single-page {
@@ -148,6 +216,75 @@
 
     .full-info-cont1 {
         width: 98.5%;
+        height: 100%;
+        background: var(--nav-side);
+        padding: 1rem;
+        border-radius: 0.4rem;
+
+    }
+
+    .full-info-cont2 {
+        width: 98.5%;
+        height: 100%;
+        background: var(--nav-side);
+        padding: 1rem;
+        border-radius: 0.4rem;
+        margin-top: 20px;
+
+    }
+
+    .inner-cont-1 {
+        width: 95.7%;
+        height: 30%;
+        display: flex;
+        gap: 10px;
+        background: var(--bg-cont);
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+        padding: 1rem;
+        margin-bottom: 20px;
+
+    }
+
+}
+@media (max-width: 425px) {
+
+    .single-page {
+        width: 100%;
+        height: 1400px;
+        width: 96%;
+        padding-top: 50px;
+
+    }
+
+    .full-info {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+    }
+
+    .basic-information {
+        width: 95%;
+        height: 10%;
+        background: var(--bg-cont);
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        margin-bottom: 2px;
+        color: var(--info);
+        display:grid;
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        justify-content: start;
+        font-size: 30px;
+        padding-left: 1rem;
+        text-transform: uppercase;
+        font-weight: bolder;
+    }
+
+    .full-info-cont1 {
+        width: 94.5%;
         height: 100%;
         background: var(--nav-side);
         padding: 1rem;
